# vinted_data

./: .gitignore  README.md  data_scientist_tasks.md  hello.py  main.py  pyproject.toml  refrence_code.md  requirements.txt  start.ps1
data/: vindy-sales-2026-03-24.csv
static/: index.css  index.js
templates/: index.html
vinted/: client.py  ingestor.py  models.py  processor.py  vindy_api.py
