[project]
name = "vinted-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]
